force-app/main/default/objects/IT_Asset__c/IT_Asset__c.object-meta.xml
<CustomObject>
    <description
  >Any company-owned hardware that is used in the course of business activities.</description>
    <label>IT Asset</label>
    <nameField>
        <label>Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IT Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>