force-app/main/default/objects/IT_Asset__c/fields/Acquisition_Date__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>The date the asset was originally acquired.</description>
    <label>Acquisition Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>