force-app/main/default/objects/IT_Asset__c/fields/Age_Months__c.field-meta.xml
<CustomField>
    <fullName>Age_Months__c</fullName>
    <formula>(YEAR(TODAY()) - YEAR(Acquisition_Date__c)) * 12 + 
(MONTH(TODAY()) - MONTH(Acquisition_Date__c)) + 
IF(DAY(TODAY()) &gt;= DAY(Acquisition_Date__c), 0, -1)</formula>
    <label>Age (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>