force-app/main/default/objects/IT_Asset__c/fields/Asset_Actions__c.field-meta.xml
<CustomField>
    <fullName>Asset_Actions__c</fullName>
    <label>Quick Assign</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Disposed</fullName>
            </value>
            <value>
                <fullName>Unused - IT Shop</fullName>
            </value>
            <value>
                <fullName>Unused - Workstation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>