force-app/main/default/objects/IT_Asset__c/fields/Asset_Details__c.field-meta.xml
<CustomField>
    <fullName>Asset_Details__c</fullName>
    <formula>BR()&amp;
BR()&amp;
BR()&amp;
BR()&amp;
BR()&amp;
BR()&amp;
Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Details</label>
    <type>Text</type>
</CustomField>