force-app/main/default/objects/IT_Asset__c/fields/Asset_Tag__c.field-meta.xml
<CustomField>
    <fullName>Asset_Tag__c</fullName>
    <description
  >Unique identifier used to internally reference the asset. This should match up to a sticker placed on the device in most cases.</description>
    <label>Asset Tag</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>