force-app/main/default/objects/IT_Asset__c/fields/Assigned_on__c.field-meta.xml
<CustomField>
    <fullName>Assigned_on__c</fullName>
    <formula>Current_Assignment__r.Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned on</label>
    <type>Date</type>
</CustomField>