force-app/main/default/objects/IT_Asset__c/fields/Assigned_to__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to__c</fullName>
    <formula>Current_Assignment__r.Employee_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned to</label>
    <type>Text</type>
</CustomField>