force-app/main/default/objects/IT_Asset__c/fields/Assigned_to_Id__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_Id__c</fullName>
    <formula>Current_Assignment__r.Employee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned to Id</label>
    <type>Text</type>
</CustomField>