force-app/main/default/objects/IT_Asset__c/fields/Assigned_to_Link__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_Link__c</fullName>
    <formula
  >HYPERLINK(&quot;https://erepublic.lightning.force.com/lightning/r/Employee__c/&quot;&amp;Assigned_to_Id__c&amp;&quot;/view&quot;,&quot;View Employee Record&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned to Link</label>
    <type>Text</type>
</CustomField>