force-app/main/default/objects/IT_Asset__c/fields/Assigned_to_State__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_State__c</fullName>
    <formula>Current_Assignment__r.Employee__r.State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned to State</label>
    <type>Text</type>
</CustomField>