force-app/main/default/objects/IT_Asset__c/fields/Assignment_Type__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Type__c</fullName>
    <formula>IF(CONTAINS(Assigned_to__c, &quot;(New)&quot;), &quot;01-New&quot;,
IF(CONTAINS(Assigned_to__c, &quot;Disposed&quot;), &quot;05-Disposed&quot;,
IF(CONTAINS(Assigned_to__c, &quot;(Unused)&quot;), &quot;04-Unused&quot;,
IF(CONTAINS(Assigned_to__c, &quot;Location&quot;), &quot;03-Location&quot;,
&quot;02-Staff&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assignment Type</label>
    <type>Text</type>
</CustomField>