force-app/main/default/objects/IT_Asset__c/fields/Current_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Current_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>A-ID</label>
    <referenceTo>IT_Asset_Assignment__c</referenceTo>
    <relationshipLabel>IT Assets</relationshipLabel>
    <relationshipName>IT_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>