force-app/main/default/objects/IT_Asset__c/fields/Disposed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disposed_Reason__c</fullName>
    <label>Disposed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Donated</fullName>
            </value>
            <value>
                <fullName>eCycled</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Stolen</fullName>
            </value>
            <value>
                <fullName>Broken</fullName>
            </value>
            <value>
                <fullName>Ex-Employee Keeping</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>