force-app/main/default/objects/IT_Asset__c/fields/Employee_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Employee_End_Date__c</fullName>
    <description
  >End date of currently assigned employee for use on reports/</description>
    <formula>Current_Assignment__r.Employee__r.End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >End date of currently assigned employee for use on reports/</inlineHelpText>
    <label>Employee End Date</label>
    <type>Date</type>
</CustomField>