force-app/main/default/objects/IT_Asset__c/fields/Employee_Type__c.field-meta.xml
<CustomField>
    <fullName>Employee_Type__c</fullName>
    <formula>TEXT(Current_Assignment__r.Employee__r.Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Type</label>
    <type>Text</type>
</CustomField>