force-app/main/default/objects/IT_Asset__c/fields/Formerly__c.field-meta.xml
<CustomField>
    <fullName>Formerly__c</fullName>
    <formula
  >Previous_Assignment__r.Employee__r.First_Name__c &amp;&quot; &quot;&amp; Previous_Assignment__r.Employee__r.Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formerly</label>
    <type>Text</type>
</CustomField>