force-app/main/default/objects/IT_Asset__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <description
  >Specify the model of the asset, for example, Latitude E6430</description>
    <label>Model</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>