force-app/main/default/objects/IT_Asset__c/fields/New_Assignment__c.field-meta.xml
<CustomField>
    <fullName>New_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Temporary holder of a new assignment, used for quick actions.</description>
    <label>New Assignment</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage
    >You may only assign assets to active employees.</errorMessage>
        <filterItems>
            <field>Employee__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>New Assignments</relationshipLabel>
    <relationshipName>IT_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>