force-app/main/default/objects/IT_Asset__c/fields/Previous_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Previous_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Looks up to the previous assignment before the current one.</description>
    <label>Previous Assignment</label>
    <referenceTo>IT_Asset_Assignment__c</referenceTo>
    <relationshipLabel>IT Assets (Previous Assignment)</relationshipLabel>
    <relationshipName>IT_Assets1</relationshipName>
    <type>Lookup</type>
</CustomField>