force-app/main/default/objects/IT_Asset__c/fields/Sacramento_County__c.field-meta.xml
<CustomField>
    <fullName>Sacramento_County__c</fullName>
    <formula>Current_Assignment__r.Employee__r.Sacramento_County__c</formula>
    <inlineHelpText>From the Assigned to Employee Record</inlineHelpText>
    <label>Sacramento County</label>
    <type>Checkbox</type>
</CustomField>