force-app/main/default/objects/IT_Asset__c/fields/Support_Tag__c.field-meta.xml
<CustomField>
    <fullName>Support_Tag__c</fullName>
    <description
  >Unique identifier used for getting support from the company producing the hardware (such as Dell)</description>
    <label>Support Tag</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>