force-app/main/default/objects/IT_Asset__c/fields/Verified_By__c.field-meta.xml
<CustomField>
    <fullName>Verified_By__c</fullName>
    <description
  >Specifies the employee that last verified that this asset is still in e.Republic inventory.</description>
    <inlineHelpText
  >Specifies the employee that last verified that this asset is still in e.Republic inventory.</inlineHelpText>
    <label>Verified By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>