force-app/main/default/objects/IT_Asset__c/fields/Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>Verified_Date__c</fullName>
    <description
  >The date this asset was last verified to be in the inventory of e.Republic.</description>
    <inlineHelpText
  >The date this asset was last verified to be in the inventory of e.Republic.</inlineHelpText>
    <label>Verified Date</label>
    <type>Date</type>
</CustomField>