force-app/main/default/objects/IT_Asset__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Vendor__c</columns>
    <columns>Model__c</columns>
    <columns>Purchase_Price__c</columns>
    <columns>Acquisition_Date__c</columns>
    <columns>Assigned_to__c</columns>
    <columns>Assigned_on__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>