force-app/main/default/objects/IT_Asset__c/listViews/All_Active_Assets.listView-meta.xml
<ListView>
    <fullName>All_Active_Assets</fullName>
    <columns>NAME</columns>
    <columns>Asset_Tag__c</columns>
    <columns>Type__c</columns>
    <columns>Vendor__c</columns>
    <columns>Model__c</columns>
    <columns>Purchase_Price__c</columns>
    <columns>Acquisition_Date__c</columns>
    <columns>Assigned_to__c</columns>
    <columns>Assigned_on__c</columns>
    <columns>Support_Tag__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assigned_to__c</field>
        <operation>notEqual</operation>
        <value>Disposed</value>
    </filters>
    <label>All Active Assets</label>
</ListView>