force-app/main/default/objects/IT_Asset__c/listViews/Printer_Copiers.listView-meta.xml
<ListView>
    <fullName>Printer_Copiers</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Vendor__c</columns>
    <columns>Model__c</columns>
    <columns>Purchase_Price__c</columns>
    <columns>Acquisition_Date__c</columns>
    <columns>Assigned_to__c</columns>
    <columns>Assigned_on__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Printer,Copier</value>
    </filters>
    <label>Printer / Copiers</label>
</ListView>