force-app/main/default/objects/IT_Asset__c/listViews/Recently_Assigned_Assets.listView-meta.xml
<ListView>
    <fullName>Recently_Assigned_Assets</fullName>
    <columns>Current_Assignment__c</columns>
    <columns>NAME</columns>
    <columns>Assigned_to__c</columns>
    <columns>Assigned_on__c</columns>
    <columns>Formerly__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assigned_to__c</field>
        <operation>notEqual</operation>
        <value>Disposed</value>
    </filters>
    <label>Recently Assigned Assets</label>
</ListView>