force-app/main/default/objects/IT_Asset__c/listViews/Workstations.listView-meta.xml
<ListView>
    <fullName>Workstations</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Vendor__c</columns>
    <columns>Model__c</columns>
    <columns>Purchase_Price__c</columns>
    <columns>Acquisition_Date__c</columns>
    <columns>Assigned_to__c</columns>
    <columns>Assigned_on__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Desktop,Laptop</value>
    </filters>
    <label>Workstations</label>
</ListView>